--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react-native-web-image-loader",
   "main": "lib/index.js",
   "scripts": {
-    "build": "rimraf lib/* && babel src --presets babel-preset-es2015 --plugins=syntax-flow,transform-object-rest-spread,transform-flow-strip-types,syntax-async-functions,transform-regenerator,transform-runtime --out-dir lib",
+    "build": "rimraf lib/* && babel src --presets @babel/preset-env --plugins=@babel/plugin-syntax-flow,@babel/plugin-transform-flow-strip-types,@babel/plugin-transform-regenerator,@babel/plugin-transform-runtime --out-dir lib",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -26,15 +26,13 @@
   },
   "homepage": "https://github.com/psychoo118/react-native-web-image-loader#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-syntax-flow": "^6.18.0",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-plugin-transform-regenerator": "^6.21.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-syntax-flow": "^7.2.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.4.0",
+    "@babel/plugin-transform-regenerator": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "lodash": "^4.17.11",
     "rimraf": "^2.5.4"
   },
